force-app/main/default/objects/Account/fields/Dietary_Preference__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Preference__c</fullName>
    <label>Dietary Preference</label>
    <type>Picklist</type>
    <description>Preferencia dietetica del cliente Pronto.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>vegetarian</fullName>
                <label>Vegetarian</label>
            </value>
            <value>
                <fullName>vegan</fullName>
                <label>Vegan</label>
            </value>
            <value>
                <fullName>pescatarian</fullName>
                <label>Pescatarian</label>
            </value>
            <value>
                <fullName>gluten_free</fullName>
                <label>Gluten Free</label>
            </value>
            <value>
                <fullName>none</fullName>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>