force-app/main/default/objects/Account/fields/Last_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Order_Date__c</fullName>
    <label>Last Order Date</label>
    <type>Date</type>
    <description>Fecha del ultimo pedido del cliente Pronto.</description>
</CustomField>