force-app/main/default/objects/Account/fields/Last_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Order_Id__c</fullName>
    <label>Last Order Id</label>
    <type>Text</type>
    <length>20</length>
    <description>Identificador del ultimo pedido del cliente Pronto.</description>
</CustomField>