force-app/main/default/objects/Account/fields/Last_Order_Items__c.field-meta.xml
<CustomField>
    <fullName>Last_Order_Items__c</fullName>
    <label>Last Order Items</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description>Articulos del ultimo pedido del cliente Pronto.</description>
</CustomField>