force-app/main/default/objects/Account/fields/Last_Order_Restaurant__c.field-meta.xml
<CustomField>
    <fullName>Last_Order_Restaurant__c</fullName>
    <label>Last Order Restaurant</label>
    <type>Text</type>
    <length>120</length>
    <description>Restaurante del ultimo pedido del cliente Pronto.</description>
</CustomField>