force-app/main/default/objects/Account/fields/Last_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Order_Status__c</fullName>
    <label>Last Order Status</label>
    <type>Picklist</type>
    <description>Estado del ultimo pedido del cliente Pronto.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>delivered</fullName>
                <label>Delivered</label>
            </value>
            <value>
                <fullName>in_transit</fullName>
                <label>In Transit</label>
            </value>
            <value>
                <fullName>preparing</fullName>
                <label>Preparing</label>
            </value>
            <value>
                <fullName>cancelled</fullName>
                <label>Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>