force-app/main/default/objects/Account/fields/Last_Order_Total_EUR__c.field-meta.xml
<CustomField>
    <fullName>Last_Order_Total_EUR__c</fullName>
    <label>Last Order Total (EUR)</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>Importe total del ultimo pedido del cliente Pronto, en euros.</description>
    <inlineHelpText>Importe total del ultimo pedido en euros (EUR).</inlineHelpText>
</CustomField>