force-app/main/default/objects/Account/fields/Loyalty_Tier__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Tier__c</fullName>
    <label>Loyalty Tier</label>
    <type>Picklist</type>
    <description>Nivel de fidelidad del cliente Pronto.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>