force-app/main/default/objects/Account/fields/Pronto_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Pronto_Customer_Id__c</fullName>
    <label>Pronto Customer Id</label>
    <type>Text</type>
    <length>20</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Identificador unico del cliente Pronto (customer_id del CSV). Clave externa para carga idempotente.</description>
    <inlineHelpText>Identificador unico del cliente en el sistema Pronto (ej. PA-1001).</inlineHelpText>
</CustomField>